# APx-apx-image-builder

./: .gitignore  Makefile  README.md  linux-boot.tcl  qspi-image-reformat  setup.cfg  setup.py  stdeb.cfg
apx-image-builder/: __main__.py  config.example.yaml
apx-image-builder/builders/: __init__.py  atf.py  base.py  dtb.py  fsbl.py  jtag.py  kernel.py  pmu.py  qspi.py  rootfs.py  rpm.py  uboot.py
apx-image-builder/builders/qspi_data/: flash.sh
apx-image-builder/builders/uboot_data/: 01_config_user.patch
apx_image_builder/: config.example.yaml  main.py
apx_image_builder/builders/: __init__.py  atf.py  base.py  fsbl.py  jtag.py  kernel.py  qspi.py  rootfs.py  rpm.py  uboot.py
apx_image_builder/builders/kernel_data/: binkernel.spec
apx_image_builder/builders/rpm_data/: apx-firmware.spec
